--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "vuepress": "^2.0.0-beta.25"
+    "vuepress": "^2.0.0-beta.25",
+    "vuepress-vite": "^2.0.0-beta.25"
   },
   "scripts": {
     "docs:dev": "vuepress dev docs",
