--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "markdown-it-mathjax3": "^3.0.0-0",
     "vuepress": "^2.0.0-beta.25",
     "vuepress-vite": "^2.0.0-beta.25"
   },
