--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "license": "MIT",
   "devDependencies": {
     "markdown-it-mathjax3": "^3.0.0-0",
-    "vuepress": "^2.0.0-beta.25",
-    "vuepress-vite": "^2.0.0-beta.25"
+    "vuepress": "^1.8.2"
   },
   "scripts": {
     "docs:dev": "vuepress dev docs",
